--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
   <canvas id="canvas1"></canvas>
+
+  <!-- characters -->
+
+  <!-- props -->
+
+  <!-- environment -->
+  <img id="layer1" src="assets/environment/layer1.png">
+  <img id="layer2" src="assets/environment/layer2.png">
+  <img id="layer3" src="assets/environment/layer3.png">
+  <img id="layer4" src="assets/environment/layer4.png">
+
   <script src="script.js"></script>
 </body>
 </html>
