--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <canvas id="canvas1"></canvas>
 
   <!-- characters -->
+  <img id="player" src="assets/characters/player.png">
 
   <!-- props -->
 
