feat: enemies image and animation

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
   <canvas id="canvas1"></canvas>
 
   <!-- characters -->
-  <img id="player" src="assets/characters/player.png">
+  <img id="player" class="d-none" src="assets/characters/player.png">
+  <img id="angler1" class="d-none" src="assets/characters/angler1.png">
+  <img id="angler2" class="d-none" src="assets/characters/angler2.png">
+  <img id="lucky" class="d-none" src="assets/characters/lucky.png">
 
   <!-- props -->
 
   <!-- environment -->
-  <img id="layer1" src="assets/environment/layer1.png">
-  <img id="layer2" src="assets/environment/layer2.png">
-  <img id="layer3" src="assets/environment/layer3.png">
-  <img id="layer4" src="assets/environment/layer4.png">
+  <img id="layer1" class="d-none" src="assets/environment/layer1.png">
+  <img id="layer2" class="d-none" src="assets/environment/layer2.png">
+  <img id="layer3" class="d-none" src="assets/environment/layer3.png">
+  <img id="layer4" class="d-none" src="assets/environment/layer4.png">
 
   <script src="script.js"></script>
 </body>
