feat: google fonts and projectile image

--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2d game - Javascript</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <canvas id="canvas1"></canvas>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>2d game - Javascript</title>
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- characters -->
-  <img id="player" class="d-none" src="assets/characters/player.png">
-  <img id="angler1" class="d-none" src="assets/characters/angler1.png">
-  <img id="angler2" class="d-none" src="assets/characters/angler2.png">
-  <img id="lucky" class="d-none" src="assets/characters/lucky.png">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <canvas id="canvas1"></canvas>
 
-  <!-- props -->
+    <!-- characters -->
+    <img id="player" class="d-none" src="assets/characters/player.png" />
+    <img id="angler1" class="d-none" src="assets/characters/angler1.png" />
+    <img id="angler2" class="d-none" src="assets/characters/angler2.png" />
+    <img id="lucky" class="d-none" src="assets/characters/lucky.png" />
 
-  <!-- environment -->
-  <img id="layer1" class="d-none" src="assets/environment/layer1.png">
-  <img id="layer2" class="d-none" src="assets/environment/layer2.png">
-  <img id="layer3" class="d-none" src="assets/environment/layer3.png">
-  <img id="layer4" class="d-none" src="assets/environment/layer4.png">
+    <!-- props -->
+    <img id="projectile" class="d-none" src="assets/props/projectile.png" />
 
-  <script src="script.js"></script>
-</body>
+    <!-- environment -->
+    <img id="layer1" class="d-none" src="assets/environment/layer1.png" />
+    <img id="layer2" class="d-none" src="assets/environment/layer2.png" />
+    <img id="layer3" class="d-none" src="assets/environment/layer3.png" />
+    <img id="layer4" class="d-none" src="assets/environment/layer4.png" />
+
+    <script src="script.js"></script>
+  </body>
 </html>
