--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- props -->
     <img id="projectile" class="d-none" src="assets/props/projectile.png" />
+    <img id="gears" class="d-none" src="assets/props/gears.png" />
 
     <!-- environment -->
     <img id="layer1" class="d-none" src="assets/environment/layer1.png" />
