feat: hivewhale and drone

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <img id="angler1" class="d-none" src="assets/characters/angler1.png" />
     <img id="angler2" class="d-none" src="assets/characters/angler2.png" />
     <img id="lucky" class="d-none" src="assets/characters/lucky.png" />
+    <img id="hivewhale" class="d-none" src="assets/characters/hivewhale.png" />
+    <img id="drone" class="d-none" src="assets/characters/drone.png" />
 
     <!-- props -->
     <img id="projectile" class="d-none" src="assets/props/projectile.png" />
