feat: explosion class

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <!-- props -->
     <img id="projectile" class="d-none" src="assets/props/projectile.png" />
     <img id="gears" class="d-none" src="assets/props/gears.png" />
+    <img id="smokeExplosion" class="d-none" src="assets/props/smokeExplosion.png" />
+    <img id="fireExplosion" class="d-none" src="assets/props/fireExplosion.png" />
 
     <!-- environment -->
     <img id="layer1" class="d-none" src="assets/environment/layer1.png" />
