--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <img id="lucky" class="d-none" src="assets/characters/lucky.png" />
     <img id="hivewhale" class="d-none" src="assets/characters/hivewhale.png" />
     <img id="drone" class="d-none" src="assets/characters/drone.png" />
+    <img id="bulbWhale" class="d-none" src="assets/characters/bulbwhale.png" />
+    <img id="moonFish" class="d-none" src="assets/characters/moonfish.png" />
 
     <!-- props -->
     <img id="projectile" class="d-none" src="assets/props/projectile.png" />
