--- a/index.html
+++ b/index.html
@@ -30,14 +30,30 @@
     <!-- props -->
     <img id="projectile" class="d-none" src="assets/props/projectile.png" />
     <img id="gears" class="d-none" src="assets/props/gears.png" />
-    <img id="smokeExplosion" class="d-none" src="assets/props/smokeExplosion.png" />
-    <img id="fireExplosion" class="d-none" src="assets/props/fireExplosion.png" />
+    <img
+      id="smokeExplosion"
+      class="d-none"
+      src="assets/props/smokeExplosion.png"
+    />
+    <img
+      id="fireExplosion"
+      class="d-none"
+      src="assets/props/fireExplosion.png"
+    />
 
     <!-- environment -->
     <img id="layer1" class="d-none" src="assets/environment/layer1.png" />
     <img id="layer2" class="d-none" src="assets/environment/layer2.png" />
     <img id="layer3" class="d-none" src="assets/environment/layer3.png" />
     <img id="layer4" class="d-none" src="assets/environment/layer4.png" />
+
+    <!-- sounds -->
+     <audio id="powerUp" src="assets/audios/powerup.wav"></audio>
+     <audio id="explosion" src="assets/audios/explosion.wav"></audio>
+     <audio id="hit" src="assets/audios/hit.wav"></audio>
+     <audio id="powerDown" src="assets/audios/powerdown.wav"></audio>
+     <audio id="shieldSound" src="assets/audios/shield.wav"></audio>
+     <audio id="shot" src="assets/audios/shot.wav"></audio>
 
     <script src="script.js"></script>
   </body>
