--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       class="d-none"
       src="assets/props/fireExplosion.png"
     />
+    <img id="shield" src="assets/props/shield.png">
 
     <!-- environment -->
     <img id="layer1" class="d-none" src="assets/environment/layer1.png" />
