--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <img id="drone" class="d-none" src="assets/characters/drone.png" />
     <img id="bulbWhale" class="d-none" src="assets/characters/bulbwhale.png" />
     <img id="moonFish" class="d-none" src="assets/characters/moonfish.png" />
+    <img id="razorfin" class="d-none" src="assets/characters/razorfin.png" />
+    <img id="stalker" class="d-none" src="assets/characters/stalker.png" />
 
     <!-- props -->
     <img id="projectile" class="d-none" src="assets/props/projectile.png" />
@@ -40,7 +42,8 @@
       class="d-none"
       src="assets/props/fireExplosion.png"
     />
-    <img id="shield" src="assets/props/shield.png">
+    <img id="shield" src="assets/props/shield.png" />
+    <img id="fireball" src="assets/props/fireball.png" />
 
     <!-- environment -->
     <img id="layer1" class="d-none" src="assets/environment/layer1.png" />
@@ -49,12 +52,12 @@
     <img id="layer4" class="d-none" src="assets/environment/layer4.png" />
 
     <!-- sounds -->
-     <audio id="powerUp" src="assets/audios/powerup.wav"></audio>
-     <audio id="explosion" src="assets/audios/explosion.wav"></audio>
-     <audio id="hit" src="assets/audios/hit.wav"></audio>
-     <audio id="powerDown" src="assets/audios/powerdown.wav"></audio>
-     <audio id="shieldSound" src="assets/audios/shield.wav"></audio>
-     <audio id="shot" src="assets/audios/shot.wav"></audio>
+    <audio id="powerUp" src="assets/audios/powerup.wav"></audio>
+    <audio id="explosion" src="assets/audios/explosion.wav"></audio>
+    <audio id="hit" src="assets/audios/hit.wav"></audio>
+    <audio id="powerDown" src="assets/audios/powerdown.wav"></audio>
+    <audio id="shieldSound" src="assets/audios/shield.wav"></audio>
+    <audio id="shot" src="assets/audios/shot.wav"></audio>
 
     <script src="script.js"></script>
   </body>
